# metal

./: CMakeLists.txt  README.md  deprecating.cpp
includes/: add.metal  application.hpp  compute.hpp  shaderfunctions.hpp  view.hpp
package/metal-cpp/SingleHeader/: MakeSingleHeader.py  Metal.hpp
src/: application.cpp  compute.cpp  main.cpp  view.cpp
